--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.5"
 pytest = "^7.2.1"
 nox = "^2022.11.21"
+django-phonenumber-field = "^7.0.2"
+phonenumbers = "^8.13.6"
+django-choices = "^1.7.2"
+pika = "^1.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
