--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ ruff = "^0.0.252"
 isort = "^5.12.0"
 black = "^23.1.0"
 mypy = "^1.0.1"
+factory-boy = "^3.2.1"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core"]
