--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ nox = "^2022.11.21"
 django-phonenumber-field = "^7.0.2"
 phonenumbers = "^8.13.6"
 django-choices = "^1.7.2"
-pika = "^1.3.1"
+python-json-logger = "^2.0.7"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -26,6 +26,7 @@ black = "^23.1.0"
 mypy = "^1.0.1"
 factory-boy = "^3.2.1"
 pytest-django = "^4.5.2"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
