--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-phonenumber-field = "^7.0.2"
 phonenumbers = "^8.13.6"
 django-choices = "^1.7.2"
 python-json-logger = "^2.0.7"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
